# DPScript

./: .editorconfig  .gitignore  ARCHITECTURE.md  COMMANDS.md  COMPILATION.md  Cargo.toml  IR.md  README.md  TODO.md  example.dps  out.ron
.cargo/: config.toml
.github/workflows/: build.yml
docs/: FFI.md  architecture.md
docs/arrays/: add.pseudocode.mcfunction  add_all.pseudocode.mcfunction  add_all_sub.pseudocode.mcfunction
example/: pack.toml
example/src/: example.dpir  example.dps
examples/: demo.ast.ron  demo.dps  demo.mcfunction  pack.toml  state.ron
examples/nested/: test.dps
mod/: .editorconfig  LICENSE.md  build.gradle  gradle.properties  settings.gradle
mod/gradle/: libs.versions.toml
src/: call.rs  cli.rs  comp.rs  compiler.rs  config.rs  error.rs  expr.rs  format.rs  func.rs  lib.rs  lines.rs  macros.rs  main.rs  nbt.rs  op.rs  parser.rs  selector.rs  state.rs  testing.rs  util.rs  var.rs
src/ast/: mod.rs
src/ast/node/: block.rs  call.rs  cond.rs  enums.rs  export.rs  func.rs  import.rs  literal.rs  loops.rs  mod.rs  module.rs  objective.rs  ops.rs  ret.rs  sub.rs  ty.rs  var.rs
src/builtins/: enums.rs  types.rs
src/cli/: mod.rs
src/compiler/: mod.rs
src/dpscript/: mod.rs
src/dpscript/ast/: mod.rs
src/dpscript/builtins/: enums.rs  mod.rs
src/dpscript/lowerer/: ctx.rs  mod.rs
src/dpscript/tokenizer/: inner.rs
src/dpscript/validator/: ctx.rs  mod.rs
src/error/: compiler.rs  dep.rs  lexer.rs  lowerer.rs  mod.rs  tokenizer.rs  validator.rs
src/expr/: call.rs  component.rs  function.rs  mod.rs  nbt.rs  selector.rs  variable.rs
src/ir/: mod.rs
src/ir/ast/: mod.rs
src/ir/compiler/: mod.rs  node.rs  pack.rs  tag.rs
src/ir/finalizer/: mod.rs  node.rs
src/lexer/: mod.rs
src/lowerer/: ctx.rs  mod.rs
src/lsp/: mod.rs
src/pack/: config.rs  deps.rs  mod.rs
src/tokenizer/: inner.rs  mod.rs  token.rs
src/util/: bits.rs  cursor.rs  ident.rs  map.rs  mod.rs  span.rs  versions.rs
src/validator/: mod.rs
std/: pack.toml
std/src/: advops.dps  array.dps  base.dps  core.dps  data.dps  scoreboard.dps  selectors.dps  std.dps
vscode/: .prettierignore  .vscodeignore  LICENSE  language-configuration.json  package.json  pnpm-lock.yaml
vscode/client/: package.json  pnpm-lock.yaml  tsconfig.json
vscode/syntaxes/: dpscript.iro  dpscript.tmLanguage  dpscript.tmLanguage.json  dpscript.tmLanguage.yml  dpscript_ir.iro  dpscript_ir.tmLanguage  dpscript_ir.tmLanguage.json  dpscript_ir.tmLanguage.yml  iro.iro  iro.tmLanguage  iro.tmLanguage.json  iro.tmLanguage.yml
(+198 files in other folders)
