[package]
name = "dpscript"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/RedstoneWizard08/DPScript"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
indicatif = "0.17.8"
lazy_static = "1.4.0"
miette = { version = "7.2.0", features = ["fancy", "serde"] }
ron = "0.8.1"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
toml = "0.8.12"
walkdir = "2.5.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/dsc-{ target }"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
