[package]
name = "dpscript"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/RedstoneWizard08/DPScript"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
indicatif = "0.17.8"
json5 = "0.4.1"
miette = { version = "7.2.0", features = ["fancy", "serde", "backtrace"] }
once_cell = "1.20.2"
regex = "1.11.0"
ron = "0.8.1"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter", "registry"] }
uuid = { version = "1.10.0", features = ["v4"] }
walkdir = "2.5.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/dsc-{ target }"
pkg-fmt = "bin"
